--- a/STYLE/dashboard.css
+++ b/STYLE/dashboard.css
@@ -124,6 +124,126 @@ body {
     color: #10002b;
 }
 
+.espacoBtnDividas{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    margin-right: 6vw;
+    height: 3vw;
+    width: 100%;
+}
+
+.btnDividas{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80%;
+    width: 18vw;
+    gap: .5vw;
+    border-radius: 2vw;
+    cursor: pointer;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+}
+
+.btnDividas:hover{
+    background-color: #10002b;
+}
+
+.btnDividas:hover a, .btnDividas:hover i{
+    color: white;
+}
+
+.btnDividas a{
+    border-radius: 50%;
+    font-size: 1.4vw;
+}
+
+.laranja{
+    color: #ff6d00 !important;
+}
+
+.subDividas {
+    display: flex;
+    position: absolute;
+    top: 50vw;
+    right: 3vw;
+    height: 20vw;
+    width: 20vw;
+    transition: opacity 0.4s ease, visibility 0.4s ease;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+    border-radius: 0.5vw;
+    z-index: 1;
+    opacity: 0;
+    visibility: hidden;
+    background-color: #fff;
+    flex-direction: column;
+}
+
+.btnDividas:hover .subDividas {
+    opacity: 1;
+    visibility: visible;
+}
+
+.espacoCimaDividas{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 20%;
+    gap: 2vw;
+}
+
+.espacoCimaDividas a{
+    border-bottom: #ff6d00 solid 4px;
+    border-radius: 0 !important;
+    color: black !important;
+}
+
+.espacoBaixoDividas{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    flex-direction: column;
+    gap: .2vw;
+}
+
+.linhaDivida{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+}
+
+.divnomeDivida, .divValorDivida, .divStatusDivida{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 30%;
+}
+
+.divnomeDivida p, .divValorDivida p{
+    color: black !important;
+    font-size: 1vw !important;
+}
+
+.divStatusDivida p{
+    color: green !important;
+    font-size: 1vw;
+}
+
+
+
+
+
+
+
+
+
+
 .espacoDividas{
     display: flex;
     justify-content: center;
