--- a/STYLE/sobreNos.css
+++ b/STYLE/sobreNos.css
@@ -18,7 +18,7 @@ body{
     align-items: center;
     height: 43vw;
     width: 100%;
-    background-image: url(../PICS/imgsSobreNos/img_topo.png);
+    background-image: url(../PICS/imgsSobreNos/img_topo.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
