--- a/STYLE/dashboard.css
+++ b/STYLE/dashboard.css
@@ -226,6 +226,7 @@ body {
 .alterarDados {
     margin: 20px;
     padding: 20px;
+    position: absolute;
     background-color: #f9f9f9;
     border-radius: 8px;
 }
