--- a/STYLE/perfil.css
+++ b/STYLE/perfil.css
@@ -153,7 +153,9 @@ body{
     text-decoration: none;
     border-radius: 2vw;
 }
-
+.btnAnalise a {
+    color: #10002b;
+}
 .btnAnalise:hover a{
     color: #ff6d00;
 }
