--- a/STYLE/dashboard.css
+++ b/STYLE/dashboard.css
@@ -140,14 +140,30 @@ body {
 }
 
 .planFinanceiro {
+    
     background-color: #f9f9f9;
     border-radius: 1vh;
     padding: 2vh;
     box-shadow: 0 0.4vh 0.8vh rgba(0, 0, 0, 0.1);
     max-width: 40vw;
     margin: 2vh auto;
+    margin-top: 10vh;
     font-family: 'Arial', sans-serif;
 }
+.fechar {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    color: #ff6d00; /* Cor que combina com seu tema */
+}
+
+.fechar:hover {
+    color: #10002b;
+}
+
 
 .planFinanceiro form {
     display: flex;
@@ -571,6 +587,29 @@ body {
     height: 3vw;
 }
 
+.voltar{
+    position: absolute;
+    height: 10vh;
+    font-size: 2vh;
+    filter: none;
+    width: 20vh;
+    display: none;
+    cursor: pointer;
+    margin-left: 160vh;
+    margin-top: -3vh;
+    background-color: #10002b;
+    border-radius: 2vh;
+    border: solid 1vh white;
+    color: white;
+    transition: 0.5s;
+}
+.voltar:hover{
+    background-color: #e65a00;
+    border: solid #10002b;
+    color: #10002b;
+    box-shadow: 0.1vh 0.1vh 1vh black;
+}
+
 .botaoDivida{
     width: 10vw;
     height: 60%;
@@ -581,7 +620,13 @@ body {
     border-radius: 2vw;
     cursor: pointer;
 }
+.borrado {
+   
+        filter: blur(5px); /* Aplica o desfoque */
+        pointer-events: none; /* Desabilita interações com o fundo */
+        user-select: none; /* Evita seleção de texto no fundo */
 
+}
 .btnDividaPaga{
     width: 10vw;
     height: 1.8vw;
@@ -589,18 +634,24 @@ body {
     font-size: 1vw;
     color: #ff6d00;
     border: none;
+    
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
     border-radius: 2vw;
 }
 
 .espacoBtnDivida{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
+
     height: 5vw;
 }
-
+.formAtualizarSaldo{
+    filter: none;
+    pointer-events: auto;
+}
 .btnAdicionarDivida{
     display: flex;
     justify-content: center;
@@ -633,6 +684,7 @@ body {
 
 .espacoBtnFixo{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
