--- a/STYLE/edit.css
+++ b/STYLE/edit.css
@@ -91,6 +91,15 @@ body{
     border: none;
     border-radius: 2vw;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+    cursor: pointer;
+}
+
+.btnNaoBaixo:hover{
+    color: green;
+}
+
+.btnSimBaixo:hover{
+    color: red;
 }
 
 .conteudo{
