--- a/STYLE/headeralternative.css
+++ b/STYLE/headeralternative.css
@@ -33,6 +33,10 @@ header img{
     gap: 1vw;
     font-size: 1.3vw;
 }
+
+.user-photo{
+    margin-top: .5vw;
+}
 .user div p{
     color: #10002b;
 }
