--- a/STYLE/dashboard.css
+++ b/STYLE/dashboard.css
@@ -140,16 +140,38 @@ body {
 }
 
 .planFinanceiro {
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #f9f9f9;
     border-radius: 1vh;
-    padding: 2vh;
+    width: 40%;
+    height: 15vw;
+    margin-top: 4vw;
     box-shadow: 0 0.4vh 0.8vh rgba(0, 0, 0, 0.1);
-    max-width: 40vw;
-    margin: 2vh auto;
-    margin-top: 10vh;
-    font-family: 'Arial', sans-serif;
 }
+
+.tituloFinanceiro{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 15%;
+    color: #ff6d00;
+    font-weight: bold;
+    font-size: 1vw;
+}
+
+.textoFinanceiro{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 40%;
+    flex-direction: column;
+    font-size: .7vw;
+}
+
 .fechar {
     position: absolute;
     top: 10px;
@@ -164,22 +186,23 @@ body {
     color: #10002b;
 }
 
-
 .planFinanceiro form {
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    align-items: flex-start;
 }
 
 .planFinanceiro label {
     font-weight: bold;
     color: #10002b;
     margin-bottom: 1vh;
-    font-size: 1.4vh;
+    font-size: 1vw;
+    color: #ff6d00;
 }
 
 .planFinanceiro input[type="number"] {
-    width: 100%;
+    width: 50%;
     padding: 1vh;
     margin-bottom: 1.5vh;
     border: 0.1vh solid #ddd;
@@ -357,6 +380,25 @@ body {
     align-items: center;
     height: 40%;
     width: 100%;
+}
+#buton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 55%;
+    height: 2vw;
+    margin-bottom: .5vw;
+    font-size: 1vw;
+    border: none;
+    color: #ff6d00;
+    font-weight: bold;
+    cursor: pointer;
+    background-color: #fff;
+    gap: .5vw;
+}
+
+#buton:hover{
+    color: #10002b !important;
 }
 
 .tituloDividas{
@@ -641,17 +683,17 @@ body {
 
 .espacoBtnDivida{
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-
     height: 5vw;
+    gap: 2vw;
 }
 .formAtualizarSaldo{
     filter: none;
     pointer-events: auto;
 }
+
 .btnAdicionarDivida{
     display: flex;
     justify-content: center;
@@ -665,8 +707,29 @@ body {
     border-radius: 2vw;
     background-color: #e9ecef;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
-    margin-bottom: 4vw;
     gap: 1vw;
+}
+
+#butonDivida{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2vw;
+    height: 3vw;
+    width: 15vw;
+    text-decoration: none;
+    text-align: center;
+    color: #10002b;
+    border-radius: 2vw;
+    background-color: #e9ecef;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+    gap: 1vw;
+    cursor: pointer;
+    border: none;
+}
+
+#butonDivida:hover{
+    color: #ff6d00 !important;
 }
 
 .btnAdicionarDivida:hover{
@@ -684,11 +747,11 @@ body {
 
 .espacoBtnFixo{
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 5vw;
+    gap: 2vw;
 }
 
 .btnAdicionarFixo{
@@ -704,8 +767,29 @@ body {
     border-radius: 2vw;
     background-color: #e9ecef;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
-    margin-bottom: 4vw;
     gap: 1vw;
+}
+
+#butonGasto{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2vw;
+    height: 3vw;
+    width: 15vw;
+    text-decoration: none;
+    text-align: center;
+    color: #10002b;
+    border-radius: 2vw;
+    background-color: #e9ecef;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+    gap: 1vw;
+    cursor: pointer;
+    border: none;
+}
+
+#butonGasto:hover{
+    color: #ff6d00 !important;
 }
 
 .btnAdicionarFixo:hover{
