--- a/STYLE/action.css
+++ b/STYLE/action.css
@@ -54,6 +54,11 @@ body::-webkit-scrollbar-track {
     height: 100%;
     width: 25%;
     padding: 1vw;
+
+}
+
+.left h1{
+    font-size: 1.5vw;
 }
 
 select {
@@ -110,6 +115,10 @@ select {
     width: 35%;
 }
 
+.center h1{
+    font-size: 1.5vw;
+}
+
 .nome{
     height: 50%;
     width: 100%;
@@ -140,6 +149,7 @@ select {
 }
 
 .maior{
+    padding: 1vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -167,6 +177,7 @@ select {
 }
 
 .menor{
+    padding: 1vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -176,6 +187,14 @@ select {
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
     width: 40%;
     border-radius: 2vw;
+}
+
+.menor h2{
+    font-size: 1.5vw;
+}
+
+.maior h2{
+    font-size: 1.5vw;
 }
 
 .right{
@@ -191,10 +210,105 @@ select {
     gap: 2vw;
 }
 
+.right h1{
+    font-size: 1.5vw;
+}
+
 .right iframe{
     width: 90%;
+    height: 17vw;
 }
 
 .right p{
+    font-size: .9vw;
     text-align: center;
+}
+
+@media screen and (max-width: 907px) {
+
+    .container{
+        gap: 5vw;
+        flex-direction: column;
+        height: 100%;
+    }
+
+    .left{
+        height: 300px !important;
+        width: 90%;
+    }
+    
+    .left h1{
+        font-size: 3vw;
+    }
+
+    .left .select{
+        width: 90%;
+
+    }
+
+    .center{
+        height: 1000000px !important;
+        width: 90%;
+    }
+
+    .center h1{
+        font-size: 3vw;
+    }
+
+    .right{
+        width: 90%;
+        height: 600vw !important;
+    }
+
+    header{
+        height: 100px;
+    }
+
+    .right iframe{
+        height: 38vw;
+    }
+
+    .right h1{
+        font-size: 3vw;
+    }
+
+    .right p {
+        font-size: 12px;
+    }
+
+    #mxdia{
+        font-size: 4vw;
+    }
+    
+    #mndia{
+        font-size: 4vw;
+    }
+    
+    #preco{
+        font-size: 4vw;
+    }
+
+    .maior h2{
+        font-size: 3vw;
+    }
+
+    .menor h2{
+        font-size: 3vw;
+    }
+
+    .bloco h2{
+        font-size: 3vw;
+    }
+}
+
+@media screen and (max-width: 600px) {
+
+    .container{
+        flex-direction: column;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+
+
 }
