--- a/STYLE/dashboard.css
+++ b/STYLE/dashboard.css
@@ -263,47 +263,65 @@ body {
 
 
 .alterarDados {
+    height: 25vw;
+    width: 20vw;
     margin: 20px;
     padding: 20px;
     position: absolute;
+    top: 10vw;
     background-color: #f9f9f9;
     border-radius: 8px;
 }
 
-.alterarDados h2 {
+.alterarDados h2, .alterarDados2 h2 {
     margin-bottom: 10px;
     color: #10002b;
 }
 
-.alterarDados form {
+.alterarDados form{
     display: flex;
     flex-direction: column;
-    margin-bottom: 20px;
+    gap: .7vw;
 }
 
-.alterarDados label {
+.alterarDados label, .alterarDados2 label {
     margin-bottom: 5px;
     font-weight: bold;
 }
 
-.alterarDados input, .alterarDados select, .alterarDados button {
+.alterarDados input, .alterarDados select, .alterarDados button,.alterarDados2 input, .alterarDados2 select, .alterarDados2 button {
     margin-bottom: 15px;
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 4px;
 }
 
-.alterarDados button {
+.alterarDados button, .alterarDados2 button {
     background-color: #ff6d00;
     color: white;
     font-weight: bold;
     cursor: pointer;
 }
 
-.alterarDados button:hover {
+.alterarDados button:hover, .alterarDados2 button:hover {
     background-color: #e65a00;
 }
+.alterarDados2 {
+    height: 32vw;
+    width: 20vw;
+    margin: 20px;
+    padding: 20px;
+    position: absolute;
+    top: 10vw;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+}
 
+.alterarDados2 form {
+    display: flex;
+    flex-direction: column;
+    gap: .2vw;
+}
 
 .tituloDash a{
     color: #ff6d00;
@@ -631,25 +649,21 @@ body {
 
 .voltar{
     position: absolute;
-    height: 10vh;
-    font-size: 2vh;
-    filter: none;
-    width: 20vh;
+    height: auto;
+    font-size: 1.5vw;
+    width: 3vw;
     display: none;
     cursor: pointer;
-    margin-left: 160vh;
-    margin-top: -3vh;
-    background-color: #10002b;
-    border-radius: 2vh;
-    border: solid 1vh white;
-    color: white;
-    transition: 0.5s;
+    margin-right: -17vw;
+    top: 11.2vw;
+    color: black;
+    border-radius: 2vw;
+    border: none !important;
+    background-color: #f9f9f9;
 }
+
 .voltar:hover{
-    background-color: #e65a00;
-    border: solid #10002b;
-    color: #10002b;
-    box-shadow: 0.1vh 0.1vh 1vh black;
+    color: red;
 }
 
 .botaoDivida{
@@ -662,13 +676,13 @@ body {
     border-radius: 2vw;
     cursor: pointer;
 }
-.borrado {
-   
-        filter: blur(5px); /* Aplica o desfoque */
-        pointer-events: none; /* Desabilita interações com o fundo */
-        user-select: none; /* Evita seleção de texto no fundo */
 
+.borrado {
+    filter: blur(5px); /* Aplica o desfoque */
+    pointer-events: none; /* Desabilita interações com o fundo */
+    user-select: none; /* Evita seleção de texto no fundo */
 }
+
 .btnDividaPaga{
     width: 10vw;
     height: 1.8vw;
@@ -676,7 +690,6 @@ body {
     font-size: 1vw;
     color: #ff6d00;
     border: none;
-    
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
     border-radius: 2vw;
 }
