--- a/STYLE/dashboard.css
+++ b/STYLE/dashboard.css
@@ -315,6 +315,7 @@ body {
     top: 10vw;
     background-color: #f9f9f9;
     border-radius: 8px;
+    border: solid 2px #10002b;
 }
 
 .alterarDados2 form {
@@ -354,7 +355,8 @@ body {
     align-items: center;
     width: 65%;
     height: 100%;
-    gap: 1vw;
+    gap: .8vw;
+    padding: .8vw;
 }
 
 .divGastos{
@@ -392,6 +394,14 @@ body {
     width: 100%;
 }
 
+.nomeGasto2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40%;
+    width: 100%;
+}
+
 .propGasto{
     display: flex;
     justify-content: center;
@@ -399,20 +409,31 @@ body {
     height: 40%;
     width: 100%;
 }
+
+.propGasto2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40%;
+    width: 100%;
+    margin-bottom: 2.3vw;
+}
+
 #buton{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 55%;
+    width: 90%;
     height: 2vw;
     margin-bottom: .5vw;
-    font-size: 1vw;
+    font-size: .9vw;
     border: none;
     color: #ff6d00;
     font-weight: bold;
     cursor: pointer;
     background-color: #fff;
     gap: .5vw;
+    
 }
 
 #buton:hover{
@@ -654,10 +675,10 @@ body {
     width: 3vw;
     display: none;
     cursor: pointer;
-    margin-right: -17vw;
+    margin-right: -16.5vw;
     top: 11.2vw;
-    color: black;
     border-radius: 2vw;
+    color: black;
     border: none !important;
     background-color: #f9f9f9;
 }
