--- a/STYLE/cambio.css
+++ b/STYLE/cambio.css
@@ -9,9 +9,8 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-overflow-x: hidden;
-width: 100%;
-gap: 4vw;
+    overflow-x: hidden;
+    width: 100%;
 
 }
 .cambio{
@@ -19,6 +18,7 @@ gap: 4vw;
     width: 100%;
     align-items: center;
     flex-direction: column;
+    margin-top: 4vw;
 }
 body::-webkit-scrollbar {
     width: 7px;
@@ -30,7 +30,6 @@ body::-webkit-scrollbar-thumb {
 body::-webkit-scrollbar-track {
     background: #10002b;
 }
-
 
 .container {
     padding: 20px;
@@ -75,11 +74,11 @@ p {
     display:  flex;
     width: 80%;
     height: 30vw;
+    margin-top: 4vw;
   }
 
   .cambiar-item{
     flex-wrap: wrap;
-    margin-top: -3vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -202,4 +201,9 @@ p {
     align-items: center;
     margin-top: 3vw;
     font-size: .7vw;
+}
+
+footer{
+    margin-top: 0 !important;
+    background-color: #333;
 }
