--- a/STYLE/dashboard.css
+++ b/STYLE/dashboard.css
@@ -60,22 +60,64 @@ body {
     font-size: 1.2vw;
     margin-top: 2vw;
 }
+
 .caixinhaSonhos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 70%;
+    height: auto;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
     background-color: #f9f9f9;
-    border-radius: 1vh; /* Proporcional ao tamanho da tela */
-    padding: 2vh;
-    box-shadow: 0 0.4vh 0.8vh rgba(0, 0, 0, 0.1);
-    margin: 2vh auto;
-    max-width: 60vw; /* Ajustado para largura relativa */
-    font-family: 'Arial', sans-serif;
+    border-radius: .8vw;
+    margin-top: 3vw;
 }
 
-.caixinhaSonhos h2, .caixinhaSonhos h3 {
-    color: #10002b;
+.tituloCaixinha{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ff6d00;
+    font-size: 2vw;
+    width: 100%;
+    height: 10%;
+    font-weight: bold;
+}
+
+.criarMeta{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-left: 25%;
+    width: 50%;
+    height: 50%;
+    margin-top: 2vw;
+    border-bottom: solid .2vw rgba(0, 0, 0, 0.199);
+}
+
+.criarMeta a{
+    font-size: 1.5vw;
+    color: black;
+    font-weight: bold;
 }
 
 .caixinhaSonhos form {
-    margin-bottom: 2vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 1vw;
+    height: auto;
+    font-size: 1vw;
+}
+
+.caixinhaSonhos form label{
+    text-align: start;
+    width: 100%;
+    font-weight: bold;
 }
 
 .caixinhaSonhos input[type="text"], 
@@ -87,19 +129,77 @@ body {
     border-radius: 0.5vh;
 }
 
-.caixinhaSonhos input[type="submit"] {
+.caixinhaSonhos button[type="submit"] {
     background-color: #ff6d00;
     color: #fff;
+    width: 10vw;
+    height: 2vw;
+    margin-top: 1vw;
+    margin-bottom: 1vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: none;
-    padding: 1vh 2vw;
-    border-radius: 0.5vh;
+    font-size: 1vw;
+    border-radius: 2vw;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    gap: 1vw;
 }
 
-.caixinhaSonhos input[type="submit"]:hover {
+.caixinhaSonhos button[type="submit"]:hover {
     background-color: #e65c00;
 }
+
+.baixoCaixa{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+}
+
+.tituloMeta{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 10%;
+    margin-top: 3vw;
+    font-size: 1.5vw;
+    gap: .5vw;
+    font-weight: bold;
+}
+
+.espacoMetas{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    height: auto;
+    width: 80%;
+    gap: 3vw;
+    margin-bottom: 2vw;
+    margin-top: 2vw;
+}
+
+.meta{
+    height: 13vw;
+    width: 40%;
+    box-shadow: 0 0.4vh 0.8vh rgba(0, 0, 0, 0.1);
+}
+
+
+
+
+
+
+
+
+
+
+
 
 .progress-container {
     background-color: #e0e0e0;
@@ -116,10 +216,6 @@ body {
     height: 100%;
     transition: width 0.5s ease;
     border-radius: 2vh;
-}
-
-.meta {
-    margin-bottom: 2vh;
 }
 
 .meta-concluida {
@@ -489,6 +585,7 @@ body {
     border-radius: 2vw;
     cursor: pointer;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+    background-color: #fff;
 }
 
 .btnDividas:hover{
@@ -755,7 +852,7 @@ body {
     text-align: center;
     color: #10002b;
     border-radius: 2vw;
-    background-color: #e9ecef;
+    background-color: #fff;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
     gap: 1vw;
 }
@@ -771,11 +868,12 @@ body {
     text-align: center;
     color: #10002b;
     border-radius: 2vw;
-    background-color: #e9ecef;
+    background-color: #fff;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
     gap: 1vw;
     cursor: pointer;
     border: none;
+
 }
 
 #butonDivida:hover{
@@ -815,7 +913,7 @@ body {
     text-align: center;
     color: #10002b;
     border-radius: 2vw;
-    background-color: #e9ecef;
+    background-color: #fff;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
     gap: 1vw;
 }
@@ -831,7 +929,7 @@ body {
     text-align: center;
     color: #10002b;
     border-radius: 2vw;
-    background-color: #e9ecef;
+    background-color: #fff;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
     gap: 1vw;
     cursor: pointer;
@@ -891,6 +989,7 @@ body {
     border-radius: 1vw;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
     font-size: 1.7vw;
+    background-color: #fff;
 }
 
 .nomeFixo{
