--- a/STYLE/selecao.css
+++ b/STYLE/selecao.css
@@ -8,53 +8,56 @@
 }
 
 body {
-  
-    background-color:#10002b;
+    background-color:#fff;
     display: flex;
-
     align-items: center;
     flex-direction: column;
     justify-content: center;
 }
 
 nav{
-  
     width: 100%;
     height: 25vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .container {
     width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.card {
-    width:50vh;
-    height: 65vh;
-    border-radius: 30px;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
-    gap: 10vh;
-    background-color: #f8f8f8;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    transform-style: preserve-3d;
 }
 
-.card h2 {
+.container .card{
+    width: 300px;
+    height: 450px;
+    padding: 20px;
+    margin: 40px;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    background-color:#f8f8f8;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px; 
+    transform-style: preserve-3d;
+}
+
+.container .card h2{
     color: #10002b;
-    font-size: 17px;
+    transform-style: preserve-3d;
+    font-size:17px;
     margin-left: 30px;
-    text-align: left;
 }
 
 .card img.produto {
     max-width: 100px;
     transition: 0.5s;
+    transform-style: preserve-3d;
 }
 
 .card:hover img.produto, 
@@ -62,18 +65,24 @@ nav{
     transform: translate3d(0, 0, 45px);
 }
 
-
 .card button {
-    padding: 10px 40px;
-    background-color: #fff;
+    height: 2.5vw;
+    width: 6vw;
+    background-color: #ffff;
     color: #ff6d00;
     border: 3px solid #10002b;
     border-radius: 10px;
-    transition: 0.5s;
     cursor: pointer;
+    transform-style: preserve-3d;
+    transition: 0.5s;
 }
 
 .card button:hover {
     background-color: #10002b;
-    color: #fff;
+    
+}
+
+.txtPerfil{
+    font-size: 1vw;
+    font-weight: bold;
 }
