--- a/STYLE/dashboard.css
+++ b/STYLE/dashboard.css
@@ -10,7 +10,7 @@ body {
     align-items: center;
     justify-content: center;
     font-family: "Poppins", sans-serif;
-    
+    overflow-x: hidden;
     background-color: #e9ecef;
     color: #10002b;
 }
