--- a/STYLE/action.css
+++ b/STYLE/action.css
@@ -65,7 +65,7 @@ select {
     /* Reset Select */
     appearance: none;
     outline: 10px red;
-    border: 0;
+    border: 5px solid #10002b;
     box-shadow: none;
     /* Personalize */
     flex: 1;
@@ -74,14 +74,33 @@ select {
     background-color: #10002b;
     background-image: none;
     cursor: pointer;
-    border-radius: 1vw !important;
-  }
+    border-radius: 15px  !important;  
+    overflow: auto;
+    
+}
+option:hover{
+    background-color: #ff6d00;
+}
+
+::-webkit-scrollbar{
+    /* background-color: #240046; */
+    background-color: #10002b;
+    width: 5px;
+    border-top-right-radius: 15px ;
+    border-bottom-right-radius: 15px;
+
+}
+::-webkit-scrollbar-thumb{
+    /* background-color: #3C096C; */
+    background-color: #ff6d00;
+    border-radius: 10px;
+}
   /* Remove IE arrow */
-  select::-ms-expand {
+/* select::-ms-expand {
     display: none;
-  }
+} */
   /* Custom Select wrapper */
-  .select {
+/* .select {
     margin-bottom: 25VW;
     position: relative;
     background-color: #10002b;
@@ -90,9 +109,9 @@ select {
     height: 3em;
     border-radius: .5vw .5vw .2vw .2vw;
     overflow: hidden;
-  }
+} */
   /* Arrow */
-  .select::after {
+/* .select::after {
     content: '\25BC';
     position: absolute;
     top: 0;
@@ -101,13 +120,12 @@ select {
     background-color: #ff6d00;
     transition: .25s all ease;
     pointer-events: none;
-  }
+} 
   /* Transition */
-  .select:hover::after {
+/* .select:hover::after {
     color: #f39c12;
-  }
+  }  */ 
   
-
 .center{
     border-radius: 1vw;
     background-color: #FFF;
