--- a/STYLE/dashboard.css
+++ b/STYLE/dashboard.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
     
 }
+
+h1{
+    font-weight: 600;
+}
 body {
     display: flex;
     flex-direction: column;
@@ -592,7 +596,7 @@ body {
     height: 80%;
     width: 18vw;
     gap: .5vw;
-    border-radius: 2vw;
+    border-radius: .5vw; 
     cursor: pointer;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
     background-color: #fff;
@@ -861,7 +865,7 @@ body {
     text-decoration: none;
     text-align: center;
     color: #10002b;
-    border-radius: 2vw;
+    border-radius: .5vw;
     background-color: #fff;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
     gap: 1vw;
@@ -877,7 +881,7 @@ body {
     text-decoration: none;
     text-align: center;
     color: #10002b;
-    border-radius: 2vw;
+    border-radius: .5vw;
     background-color: #fff;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
     gap: 1vw;
@@ -922,7 +926,7 @@ body {
     text-decoration: none;
     text-align: center;
     color: #10002b;
-    border-radius: 2vw;
+    border-radius: .5vw;
     background-color: #fff;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
     gap: 1vw;
@@ -938,7 +942,7 @@ body {
     text-decoration: none;
     text-align: center;
     color: #10002b;
-    border-radius: 2vw;
+    border-radius: .5vw;
     background-color: #fff;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
     gap: 1vw;
@@ -1010,4 +1014,8 @@ body {
 .nomeFixo{
     color: #ff6d00;
     font-size: 3vw;
+}
+
+.nomeFixo strong{
+    font-weight: 500;
 }
