--- a/STYLE/dashboard.css
+++ b/STYLE/dashboard.css
@@ -82,6 +82,8 @@ body {
     background-color: #f9f9f9;
     border-radius: .8vw;
     margin-top: 3vw;
+    margin-bottom: 2vw;
+    padding: 1vw;
 }
 
 .tituloCaixinha{
@@ -506,6 +508,7 @@ body {
 .iconeGastos img{
     width: 100%;
     height: 70%;
+    margin-left: 1vw;
 }
 
 .nomeGasto{
