--- a/STYLE/adicaoGastos.css
+++ b/STYLE/adicaoGastos.css
@@ -21,22 +21,20 @@ form{
 }
 
 .Btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
     position: fixed;
     right: -41vw;
     top: -12.5vw;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
     width: 45px;
-    height:105px;
-    border: none;
+    height: 100px;
     border-radius: 50%;
     cursor: pointer;
     position: relative;
-    overflow: hidden;
-    transition-duration: .3s;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
-    background-color: rgb(255, 65, 65);
+    background-color: rgb(230, 0, 0);
+    border: none;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;  
   }
   
   .green{
@@ -64,59 +62,6 @@ form{
     align-items: center;
     margin-top: -.2vw !important;
 }
-
-
-  /* plus sign */
-  .sign {
-    width: 100%;
-    transition-duration: .3s;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .sign svg {
-    width: 17px;
-  }
-  
-  .sign svg path {
-    fill: white;
-  }
-  /* text */
-  .text {
-    position: absolute;
-    right: 0%;
-    width: 0%;
-    opacity: 0;
-    color: white;
-    font-size: 1.2em;
-    font-weight: 600;
-    transition-duration: .3s;
-  }
-  /* hover effect on button width */
-  .Btn:hover {
-    width: 125px;
-    border-radius: 40px;
-    transition-duration: .3s;
-  }
-  
-  .Btn:hover .sign {
-    width: 30%;
-    transition-duration: .3s;
-    padding-left: 20px;
-  }
-  /* hover effect button's text */
-  .Btn:hover .text {
-    opacity: 1;
-    width: 70%;
-    transition-duration: .3s;
-    padding-right: 10px;
-  }
-  /* button click effect*/
-  .Btn:active {
-    transform: translate(2px ,2px);
-  }
-
 .green{
     background-color: green;
     width: 100%;
@@ -230,33 +175,35 @@ span{
 }
 
 .divida-item input{
+  border: none;
     width: 70%;
     padding: .5vw;
-    font-size: 1rem;
-    border: 1.5px solid #000;
-    border-radius: 0.5rem;
-    box-shadow: 2.5px 3px 0 #000;
-    outline: none;
-    transition: ease 0.25s;
+    display: flex;
+    color: black;
+    font-size: 1vw;
+    border-radius: 0.5vw;
+    background-color: #e9ecef;
 }
 
 .divida-item input:focus{
-    box-shadow: 5.5px 7px 0 black;
+    box-shadow: 5.5px 7px 0 #d4d4d4;
+    border: none;
 }
 
 .divida-item-2 input{
-    width: 96%;
+  border: none;
+    width: 70%;
     padding: .5vw;
-    font-size: 1rem;
-    border: 1.5px solid #000;
-    border-radius: 0.5rem;
-    box-shadow: 2.5px 3px 0 #000;
-    outline: none;
-    transition: ease 0.25s;
+    display: flex;
+    color: black;
+    font-size: 1vw;
+    border-radius: 0.5vw;
+    background-color: #e9ecef;
 }
 
 .divida-item-2 input:focus{
-    box-shadow: 5.5px 7px 0 black;
+  box-shadow: 5.5px 7px 0 #d4d4d4;
+  border: none;
 }
 
 .espacoBtn{
