--- a/STYLE/dashboard.css
+++ b/STYLE/dashboard.css
@@ -853,6 +853,19 @@ body {
     font-size: 1vw;
     height: 20%;
     width: 100%;
+
+}
+
+.valorDivida2, .jurosDivida2, .tempoDivida2, .valorParcela2{
+    padding-left: .7vw;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    color: #fff;
+    font-size: 1vw;
+    height: 20%;
+    width: 100%;
+    font-weight: bold;
 }
 
 
@@ -876,7 +889,7 @@ body {
     height: 100%;
     font-size: 1.2vw;
     color: #fff;
-    gap: 1vw;
+    gap: .5vw;
 }
 
 .btnDivida{
