--- a/STYLE/dashboard.css
+++ b/STYLE/dashboard.css
@@ -55,6 +55,17 @@ body {
     cursor: not-allowed;
 }
 
+.alterarGasto{
+    display: flex;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    top: 33vw;
+    left: 13vw;
+    height: 5vw;
+    width: 15vw;
+}
+
 
 .tituloDash{
     display: flex;
@@ -248,6 +259,7 @@ body {
     border-radius: .5vw;
     font-size: .9vw;
     color: white;
+    cursor: pointer;
 }
 
 .progress-container {
@@ -506,8 +518,15 @@ body {
 }
 
 #chartdiv {
-    width: 100%;
-    height: 75%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 36vw;
+    top: 14.5vw;
+    left: 2vw;
+    height: 27vw;
+    
 }
 
 .direitaInfo{
@@ -516,7 +535,7 @@ body {
     align-items: center;
     width: 65%;
     height: 100%;
-    gap: .8vw;
+    gap: 2vw;
     padding: .8vw;
 }
 
@@ -545,7 +564,6 @@ body {
 .iconeGastos img{
     width: 100%;
     height: 70%;
-    margin-left: 1vw;
 }
 
 .botaoExcluirGasto{
@@ -612,7 +630,7 @@ body {
     color: #ff6d00;
     font-weight: bold;
     cursor: pointer;
-    background-color: #fff;
+    background-color: #e9ecef;
     gap: .5vw;
     
 }
