--- a/STYLE/educacao.css
+++ b/STYLE/educacao.css
@@ -12,7 +12,6 @@ body {
     justify-content: center;
     font-family: "Poppins", sans-serif;
     background-color: #fff;
-    background-color: #e9ecef;
     color: #10002b;
 }
 
@@ -99,7 +98,6 @@ body {
     margin-right: 2vw;
     color: #ff6d00;
     font-size: 1.7vw;
-    background-color: #e9ecef;
 }
 
 .textoFase{
@@ -115,8 +113,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 25vw;
+    width: 97%;
+    height: 24vw;
 }
 
 .video{
@@ -126,6 +124,7 @@ body {
     width: 38.5%;
     height: 80%;
     background-color: #ff6d00;
+    border-radius: .5vw;
 }
 
 .espacoBtn1, .espacoBtn2, .espacoBtn3, .espacoBtn4, .espacoBtn5{
@@ -143,9 +142,10 @@ body {
     height: 3.5vw;
     width: 12vw;
     font-size: 1.3vw;
-    border-radius: 1vw;
+    border-radius: .5vw;
     border: solid #ff6d00;
     color: #ff6d00;
     font-weight: bold;
     cursor: pointer;
+    background-color: #fff;
 }
