--- a/STYLE/adicaoGastos.css
+++ b/STYLE/adicaoGastos.css
@@ -417,24 +417,50 @@ span{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: white;
-    padding: 20px;
-    border-radius: 8px;
+    background-color: #e9ecef;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     z-index: 1000;
+    height: 14vw;
+    width: 40vw;
+    border-radius: .5vw;
 }
 
-.button {
-    margin: 5px;
-    padding: 10px 15px;
-    border: none;
-    background-color: #28a745;
-    color: white;
-    cursor: pointer;
+.nomeConfirmacao{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50%;
+  gap: 3vw;
+  font-size: 1.2vw;
+  color: #10002b;
 }
 
-.button.cancel {
-    background-color: #dc3545;
+.espacoConfirmacao{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50%;
+  gap: 3vw;
+  font-size: 1.2vw;
+}
+
+.button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 3vw;
+  width: 13vw;
+  border-radius: .5vw;
+  margin-bottom: 1vw;
+  font-size: 1.5vw;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.button:hover{
+  border: solid 2px #ff6d00;
 }
 
 /*teste botão*/
